ibid – homepage coming together

--- a/app/assets/stylesheets/shared/_artwork.sass
+++ b/app/assets/stylesheets/shared/_artwork.sass
@@ -23,3 +23,9 @@
     line-height: 1.4
     padding-top: 0.5rem
     text-align: center
+
+  &.-featured
+    img
+      display: absolute
+
+  &.-square
