--- a/app/assets/stylesheets/shared/_basics.sass
+++ b/app/assets/stylesheets/shared/_basics.sass
@@ -8,6 +8,7 @@ html
 body
   border-top: 0.75rem solid var(--black)
   font-family: $sans
+  font-weight: 400
   font-size: var(--t4)
   line-height: calc(var(--baseline) * 2)
   background-color: var(--default)
