--- a/app/views/layouts/_primary-footer.html.haml
+++ b/app/views/layouts/_primary-footer.html.haml
@@ -12,21 +12,21 @@
                 Dublin Inquirer is an independent, reader-supported newspaper serving Ireland's capital.
 
         .col-xs-12.col-md-3.col-md-offset-3
-          .block.-mb4
+          .block.-mb4.p.-sf
             %p
-              %big.c.-serif Managing editor
+              %big.c.-w4 Managing editor
               = link_to "Lois Kaplia", "/contributors/lois-kapila"
             %p
-              %big.c.-serif Deputy editor
+              %big.c.-w4 Deputy editor
               = link_to "Sam Tranum", "/contributors/sam-tranum"
             %p
-              %big.c.-serif City reporters
+              %big.c.-w4 City reporters
               = link_to "Sean Finnan", "/contributors/sean-finnan"
               <br>
               = link_to "Erin McGuire", "/contributors/erin-mcguire"
             %p
-              %big.c.-serif Web & strategy
-              Brian Flanagan
+              %big.c.-w4 Web & strategy
+              = link_to "Brian Flanagan", "/contributors/brian-flanagan"
 
         .col-xs-12.col-md-3
           .block.-mb4
