--- a/app/views/products/_enticement.html.haml
+++ b/app/views/products/_enticement.html.haml
@@ -21,7 +21,7 @@
             .flex.-cy.block.-pr4
               .block.-mb2
                 %h3.h.-h2 Support our work
-              .p.-t3.-serif
+              .p.-t3.-serif.-sf
                 :markdown
                   In-depth, original local reporting is time consuming and expensive. But we think it's important.
 
@@ -38,7 +38,7 @@
             .flex.-cy.block.-pr4
               .block.-mb2
                 %h3.h.-h2 Understand your city
-              .p.-t3.-serif
+              .p.-t3.-serif.-sf
                 :markdown
                   We do in-depth, shoe-leather reporting about the issues that shape Dublin. We're not funded by advertisers. We're funded by readers like you.
 
