--- a/app/assets/stylesheets/components/_primary-flag.sass
+++ b/app/assets/stylesheets/components/_primary-flag.sass
@@ -23,17 +23,17 @@
     .strapline
       display: none
       text-align: center
-      text-transform: uppercase
       position: absolute
       left: 0
       right: 0
-      top: -2.4rem
+      top: -2.45rem
       span
         margin: 0 0.075rem
         padding: 0 0.25rem
         background-color: var(--default)
         line-height: calc(var(--baseline) * 1.5)
         font-weight: 400
+        font-style: italic
         font-size: var(--t5)
 
   @media screen and (min-width: $small)
