--- a/app/views/layouts/_pagination.html.haml
+++ b/app/views/layouts/_pagination.html.haml
@@ -1,6 +1,6 @@
 - query_params = (defined?(query_params) && query_params.present?) ? query_params : {}
 
-.block.-mt2.-mb4
+.block.-py4
   .p.-t3.-centered
     .inline-block
       - if page > 1
