--- a/app/views/articles/excerpts/_tiny.html.haml
+++ b/app/views/articles/excerpts/_tiny.html.haml
@@ -2,7 +2,7 @@
   .block.-pb4.-my2
     = link_to article.path, class: 'excerpt' do
       .block.-mb1
-        %figure.artwork
+        %figure.artwork.-landscape
           .overlay.block.-b.-bg-default
             .p.-t5.c.-w4= display_category(article.category)
 
