--- a/app/views/home/stockists.html.haml
+++ b/app/views/home/stockists.html.haml
@@ -2,15 +2,15 @@
 - set_meta_tags canonical: "https://www.dublininquirer.com/stockists"
 
 %header.page-header
-  %h1.heading Stockists
+  %h1.h.-h2 Stockists
 
   .block.-mt1.p.-t3
     :markdown
       Our monthly print edition is stocked by these lovely folks around the city.
 
-.block.-pt2.-pb4
+.block.-pb4.-omega
   .wrapper.-small{role: 'layout'}
-    .article
+    %article.article.-formatted.p.-t3.-sf.-serif
       %h4 Wigwam
       %p 54 Abbey Street Middle, Dublin 1
 
