--- a/app/assets/stylesheets/components/_article.sass
+++ b/app/assets/stylesheets/components/_article.sass
@@ -10,15 +10,21 @@ section.content
   max-width: 68rem
   margin: 0 auto
 
+.article.-formatted
+  & > *:first-child
+    margin-top: 0
+    padding-top: 0
+
   p, ul, ol, blockquote
-    margin: 30px
+    margin-top: 2rem
+    margin-bottom: 2rem
 
   h3, h4
-    margin-top: 60px
-    margin-bottom: -15px
-    padding-left: 6rem
+    margin-top: 2em
+    margin-bottom: -0.5em
+    padding-left: 2em
     font-family: $sans
     font-size: 27px
     line-height: 1
-    font-weight: 800
-
+    font-weight: 600
+    letter-spacing: -0.0325em
