--- a/app/views/articles/excerpts/_cover.html.haml
+++ b/app/views/articles/excerpts/_cover.html.haml
@@ -2,17 +2,13 @@
   .block
     = link_to article.path, class: ['block', '-my2', '-p2', '-b', '-bg-faint', 'excerpt'] do
       .block.-mb1
-        %figure.artwork
-          .overlay.block.-b.-bg-default
-            .p.-t5.c.-w4= display_category(article.category)
+        %figure.artwork.-square
           - if article.featured_artwork.image.present?
             = image_tag article.featured_artwork.image.large.url
 
       .p.-centered
         %span.p.-t4
-          %h3.headline.inline.c.-w4.-serif= article.title
-          - if article.authors.any?
-            %span.c.-w4 by #{ article.authors.map(&:full_name).to_sentence }
+          %h3.headline.inline.c.-w4.-serif #{ article.title }
 
           :markdown
             <em>Read about this month&rsquo;s cover by #{ article.authors.map(&:full_name).to_sentence } &rarr;</em>
