--- a/app/assets/stylesheets/layouts/_overlay.sass
+++ b/app/assets/stylesheets/layouts/_overlay.sass
@@ -14,9 +14,9 @@
   overflow-y: auto
 
   & > .content
-    flex: 1
-    display: flex
-    justify-content: stretch
-    align-items: stretch
+    position: absolute
+    bottom: 0
+    left: 0
+    right: 0
 
   & > .footer
