--- a/app/views/home/stockists.html.haml
+++ b/app/views/home/stockists.html.haml
@@ -2,11 +2,7 @@
 - set_meta_tags canonical: "https://www.dublininquirer.com/stockists"
 
 %header.page-header
-  %h1.h.-h2 Stockists
-
-  .block.-mt1.p.-t3
-    :markdown
-      Our monthly print edition is stocked by these lovely folks around the city.
+  %h1.h.-h2 Our monthly print edition is stocked by these lovely folks around the city.
 
 .block.-pb4.-omega
   .wrapper.-small{role: 'layout'}
