--- a/app/assets/stylesheets/components/_hr.sass
+++ b/app/assets/stylesheets/components/_hr.sass
@@ -10,36 +10,10 @@ hr.-stroke
   right: calc(var(--gutter)/2)
   bottom: 0.5px
 
-hr.-not-xs
-  @media screen and (max-width: $small)
-    display: none
-
-hr.-not-if-last
-  &:last-child
-    display: none
-
-hr.-not-lg
-  @media screen and (min-width: $small)
-  @media screen and (min-width: $medium)
-  @media screen and (min-width: $large)
-    display: none
-
-hr.-only-lg
-  display: none
-  @media screen and (min-width: $small)
-  @media screen and (min-width: $medium)
-  @media screen and (min-width: $large)
-    display: block
-
-hr.-not-md
-  @media screen and (min-width: $small)
-  @media screen and (min-width: $medium)
-    display: none
-  @media screen and (min-width: $large)
-
-hr.-only-md
-  display: none
-  @media screen and (min-width: $small)
-  @media screen and (min-width: $medium)
-    display: block
-  @media screen and (min-width: $large)
+hr.-separator
+  max-width: 8rem
+  border-style: solid
+  border-color: var(--black)
+  border-width: 0.25rem 0
+  margin: 0 auto
+  padding: 0
